using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationStrings
{
    public static string Attack = "Attack";
    public static string SAttack = "SAttack";
    public static string LockMove = "LockMove";
    public static string LockRotate = "LockRotate";
    public static string CanMove = "CanMove";
    public static string IsSit = "IsSit";
    public static string IsRest = "IsRest";
    public static string IsAlive = "IsAlive";
    public static string IsAttack = "isAttack";
    public static string Suprise = "Surprise";
    public static string State = "State";

}
